// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-responsive-table/m-table-head Complexe Head Rows 1`] = `
<thead
  class="m-table-head m--is-head-style-light m--has-multiple-head-row"
>
  <tr>
    <th
      class=""
      id="forlderSpacingColumn-testTableHead"
      rowspan="2"
      scope="col"
      style="background: rgb(255, 255, 255);"
    >
      <!---->
    </th>
    <th
      class=""
      colspan="4"
      id="forlderAColumn-testTableHead"
      scope="col"
    >
      
                        Folder A
                    
    </th>
    <th
      class=""
      colspan="4"
      id="forlderBColumn-testTableHead"
      scope="col"
    >
      
                        Folder B
                    
    </th>
  </tr>
  <tr>
    <th
      class=""
      colspan="2"
      id="beforeForlderAColumn-testTableHead"
      scope="col"
    >
      
                        Before
                    
    </th>
    <th
      class=""
      colspan="2"
      id="afterForlderAColumn-testTableHead"
      scope="col"
    >
      
                        After
                    
    </th>
    <th
      class=""
      colspan="2"
      id="beforeForlderBColumn-testTableHead"
      scope="col"
    >
      
                        Before
                    
    </th>
    <th
      class=""
      colspan="2"
      id="afterForlderBColumn-testTableHead"
      scope="col"
    >
      
                        After
                    
    </th>
  </tr>
  <tr>
    <th
      class=""
      id="userNaidmeBeforeFolderA-testTableHead"
      scope="col"
    >
      
                        Id
                    
    </th>
    <th
      class="m--is-sortable m--is-text-align-left"
      id="userNameBeforeFolderA-testTableHead"
      scope="col"
    >
      <div
        class="m-table-head__cell"
      >
        <div
          class="m-table-head__cell-content"
        >
          
                                User Name
                             
          <button
            class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
            style="width: 14px; height: 14px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="12px"
              width="12px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
      </div>
    </th>
    <th
      class="m--is-sortable m--is-text-align-left"
      id="userBeforeFolderA-testTableHead"
      scope="col"
    >
      <div
        class="m-table-head__cell"
      >
        <div
          class="m-table-head__cell-content"
        >
          
                                Name
                             
          <button
            class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
            style="width: 14px; height: 14px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="12px"
              width="12px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
      </div>
    </th>
    <th
      class="m--is-sortable m--is-text-align-left"
      id="userNameAfterFolderA-testTableHead"
      scope="col"
    >
      <div
        class="m-table-head__cell"
      >
        <div
          class="m-table-head__cell-content"
        >
          
                                User Name
                             
          <button
            class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
            style="width: 14px; height: 14px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="12px"
              width="12px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
      </div>
    </th>
    <th
      class="m--is-sortable m--is-text-align-left"
      id="userAfterFolderA-testTableHead"
      scope="col"
    >
      <div
        class="m-table-head__cell"
      >
        <div
          class="m-table-head__cell-content"
        >
          
                                Name
                             
          <button
            class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
            style="width: 14px; height: 14px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="12px"
              width="12px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
      </div>
    </th>
    <th
      class="m--is-sortable m--is-text-align-left"
      id="userNameBeforeFolderB-testTableHead"
      scope="col"
    >
      <div
        class="m-table-head__cell"
      >
        <div
          class="m-table-head__cell-content"
        >
          
                                User Name
                             
          <button
            class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
            style="width: 14px; height: 14px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="12px"
              width="12px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
      </div>
    </th>
    <th
      class="m--is-sortable m--is-text-align-left"
      id="userBeforeFolderB-testTableHead"
      scope="col"
    >
      <div
        class="m-table-head__cell"
      >
        <div
          class="m-table-head__cell-content"
        >
          
                                Name
                             
          <button
            class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
            style="width: 14px; height: 14px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="12px"
              width="12px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
      </div>
    </th>
    <th
      class="m--is-sortable m--is-text-align-left"
      id="userNameAfterFolderB-testTableHead"
      scope="col"
    >
      <div
        class="m-table-head__cell"
      >
        <div
          class="m-table-head__cell-content"
        >
          
                                User Name
                             
          <button
            class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
            style="width: 14px; height: 14px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="12px"
              width="12px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
      </div>
    </th>
    <th
      class="m--is-sortable m--is-text-align-left"
      id="userAfterFolderB-testTableHead"
      scope="col"
    >
      <div
        class="m-table-head__cell"
      >
        <div
          class="m-table-head__cell-content"
        >
          
                                Name
                             
          <button
            class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
            style="width: 14px; height: 14px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="12px"
              width="12px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
      </div>
    </th>
  </tr>
</thead>
`;

exports[`Storyshots modul-components|m-responsive-table/m-table-head Custom HTML - Use scope slot 1`] = `
<thead
  class="m-table-head m--is-head-style-light"
>
  <tr>
    <th
      class="m--is-sortable m--is-sorted m--is-text-align-left"
      id="name-testTableHead"
      scope="col"
    >
      <div
        class="m-table-head__cell"
      >
        <div
          class="m-table-head__cell-content"
        >
          <div
            class="m-checkbox m--is-checkbox-left"
          >
            <input
              class="m-checkbox__hidden"
              id="mCheckbox-fakeId"
              type="checkbox"
            />
             
            <!---->
             
            <label
              class="m-checkbox__wrap"
              for="mCheckbox-fakeId"
            >
              <span
                aria-hidden="true"
                class="m-checkbox__input"
              >
                <span
                  class="m-checkbox__input__icon"
                />
              </span>
               
              <div
                class="m-checkbox__label"
              >
                Name
                
              </div>
            </label>
             
            <div
              class="m-validation-message m-checkbox__message"
            >
              <!---->
               
              <!---->
            </div>
          </div>
          
                (Slot head-cell.name)
             
          <button
            class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple m--is-sort-asc"
            style="width: 14px; height: 14px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="12px"
              width="12px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
      </div>
    </th>
    <th
      class="m--is-sortable m--is-text-align-center"
      id="id-testTableHead"
      scope="col"
    >
      <div
        class="m-table-head__cell"
      >
        <div
          class="m-table-head__cell-content"
        >
          
                    Id
                
                (Slot head-cell.id)
             
          <button
            class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
            style="width: 14px; height: 14px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="12px"
              width="12px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
      </div>
    </th>
    <th
      class="m--is-sortable m--is-text-align-left"
      id="email-testTableHead"
      scope="col"
    >
      <div
        class="m-table-head__cell"
      >
        <div
          class="m-table-head__cell-content"
        >
          
                    Email
                
                (Slot head-cell.email)
             
          <button
            class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
            style="width: 14px; height: 14px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="12px"
              width="12px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
      </div>
    </th>
    <th
      class="m--is-sortable m--is-text-align-left"
      id="dateOfBirth-testTableHead"
      scope="col"
    >
      <div
        class="m-table-head__cell"
      >
        <div
          class="m-table-head__cell-content"
        >
          
                    Date of birth
                
                (Slot head-cell.dateOfBirth)
             
          <button
            class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
            style="width: 14px; height: 14px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="12px"
              width="12px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
      </div>
    </th>
    <th
      class="m--is-sortable m--is-text-align-left"
      id="phoneNumber-testTableHead"
      scope="col"
    >
      <div
        class="m-table-head__cell"
      >
        <div
          class="m-table-head__cell-content"
        >
          
                    Phone number
                
                (Slot head-cell.phoneNumber)
             
          <button
            class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
            style="width: 14px; height: 14px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="12px"
              width="12px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
      </div>
    </th>
  </tr>
</thead>
`;

exports[`Storyshots modul-components|m-responsive-table/m-table-head Prop Disabled 1`] = `
<thead
  class="m-table-head m--is-head-style-light"
>
  <tr>
    <th
      class="m--is-sortable m--is-sorted m--is-disabled m--is-text-align-left"
      id="name-testTableHead"
      scope="col"
    >
      <div
        class="m-table-head__cell"
      >
        <div
          class="m-table-head__cell-content"
        >
          
                                Name
                             
          <button
            class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple m--is-disabled m--is-sort-asc"
            disabled="disabled"
            style="width: 14px; height: 14px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="12px"
              width="12px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
      </div>
    </th>
    <th
      class="m--is-sortable m--is-disabled m--is-text-align-center"
      id="id-testTableHead"
      scope="col"
    >
      <div
        class="m-table-head__cell"
      >
        <div
          class="m-table-head__cell-content"
        >
          
                                Id
                             
          <button
            class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple m--is-disabled"
            disabled="disabled"
            style="width: 14px; height: 14px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="12px"
              width="12px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
      </div>
    </th>
    <th
      class="m--is-sortable m--is-disabled m--is-text-align-left"
      id="email-testTableHead"
      scope="col"
    >
      <div
        class="m-table-head__cell"
      >
        <div
          class="m-table-head__cell-content"
        >
          
                                Email
                             
          <button
            class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple m--is-disabled"
            disabled="disabled"
            style="width: 14px; height: 14px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="12px"
              width="12px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
      </div>
    </th>
    <th
      class="m--is-sortable m--is-disabled m--is-text-align-left"
      id="dateOfBirth-testTableHead"
      scope="col"
    >
      <div
        class="m-table-head__cell"
      >
        <div
          class="m-table-head__cell-content"
        >
          
                                Date of birth
                             
          <button
            class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple m--is-disabled"
            disabled="disabled"
            style="width: 14px; height: 14px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="12px"
              width="12px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
      </div>
    </th>
    <th
      class="m--is-sortable m--is-disabled m--is-text-align-left"
      id="phoneNumber-testTableHead"
      scope="col"
    >
      <div
        class="m-table-head__cell"
      >
        <div
          class="m-table-head__cell-content"
        >
          
                                Phone number
                             
          <button
            class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple m--is-disabled"
            disabled="disabled"
            style="width: 14px; height: 14px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="12px"
              width="12px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
      </div>
    </th>
  </tr>
</thead>
`;

exports[`Storyshots modul-components|m-responsive-table/m-table-head Sandbox 1`] = `
<thead
  class="m-table-head m--is-head-style-light"
>
  <tr>
    <th
      class="m--is-sortable m--is-sorted m--is-text-align-left"
      id="name-testTableHead"
      scope="col"
    >
      <div
        class="m-table-head__cell"
      >
        <div
          class="m-table-head__cell-content"
        >
          
                                Name
                             
          <button
            class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple m--is-sort-asc"
            style="width: 14px; height: 14px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="12px"
              width="12px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
      </div>
    </th>
    <th
      class="m--is-sortable m--is-text-align-center"
      id="id-testTableHead"
      scope="col"
    >
      <div
        class="m-table-head__cell"
      >
        <div
          class="m-table-head__cell-content"
        >
          
                                Id
                             
          <button
            class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
            style="width: 14px; height: 14px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="12px"
              width="12px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
      </div>
    </th>
    <th
      class="m--is-sortable m--is-text-align-left"
      id="email-testTableHead"
      scope="col"
    >
      <div
        class="m-table-head__cell"
      >
        <div
          class="m-table-head__cell-content"
        >
          
                                Email
                             
          <button
            class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
            style="width: 14px; height: 14px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="12px"
              width="12px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
      </div>
    </th>
    <th
      class="m--is-sortable m--is-text-align-left"
      id="dateOfBirth-testTableHead"
      scope="col"
    >
      <div
        class="m-table-head__cell"
      >
        <div
          class="m-table-head__cell-content"
        >
          
                                Date of birth
                             
          <button
            class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
            style="width: 14px; height: 14px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="12px"
              width="12px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
      </div>
    </th>
    <th
      class="m--is-sortable m--is-text-align-left"
      id="phoneNumber-testTableHead"
      scope="col"
    >
      <div
        class="m-table-head__cell"
      >
        <div
          class="m-table-head__cell-content"
        >
          
                                Phone number
                             
          <button
            class="m-icon-button m-table-head__sort-icon m--is-skin-light m--has-ripple"
            style="width: 14px; height: 14px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="12px"
              width="12px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
      </div>
    </th>
  </tr>
</thead>
`;
